# dexhand_sdk_cpp

./: README.md
examples/: CMakeLists.txt  dexhand021.cpp  dexhand021s.cpp  monitor.cpp
include/: DateTimeUtils.h  DexHand.h  StringUtils.h  commondef.h
lib/linux/aarch64/: libserial.so.1.0.0
lib/linux/x86_64/: libserial.so.1.0.0
lib/windows/: dexhand.lib
lib/windows/kerneldlls/devices_property/: usbcanfd-200u.xml
